# HomeDisk

./: .gitignore  Cargo.toml  Cross.toml  README.md  config.toml  renovate.json  rustfmt.toml  sqlite.sh  tables.sql
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-release-binaries.yml  build-release.yml  build-releases.yml  ci.yml  nightly.yml  rust.yml  website.yml
core/: Cargo.toml
core/src/: init.rs  lib.rs  logger.rs  main.rs
database/: Cargo.toml
database/src/: error.rs  lib.rs  sqlite.rs  user.rs
scripts/: create-sqlite-database.sh
server/: Cargo.toml
server/src/: error.rs  lib.rs
server/src/auth/: login.rs  mod.rs  register.rs  types.rs  whoami.rs
server/src/fs/: create_dir.rs  delete.rs  download.rs  list.rs  mod.rs  upload.rs
server/src/middleware/: auth.rs  jwt.rs  mod.rs  validate_json.rs  validate_path.rs
sql/: tables.sql
src/: config.rs  logger.rs  main.rs  variables.rs
src/database/: error.rs  mod.rs  sqlite.rs  user.rs
src/server/: error.rs  mod.rs
src/server/api/: mod.rs
src/server/api/auth/: login.rs  mod.rs  register.rs  whoami.rs
src/server/api/fs/: create_dir.rs  delete.rs  list.rs  mod.rs  upload.rs
src/server/utils/: mod.rs  path.rs  ratelimit.rs  token.rs
src/types/: config.rs
types/: Cargo.toml
types/src/: custom_option.rs  lib.rs  macros.rs  token.rs
types/src/auth/: login.rs  mod.rs  whoami.rs
types/src/auth/auth/: login.rs
types/src/config/: mod.rs  toml.rs  types.rs
types/src/database/: mod.rs  user.rs
types/src/errors/: auth.rs  database.rs  fs.rs  mod.rs  server.rs
types/src/fs/: create_dir.rs  delete.rs  download.rs  list.rs  mod.rs  upload.rs
utils/: Cargo.toml
utils/src/: config.rs  lib.rs
utils/src/config/: config.rs  error.rs  mod.rs  parser.rs
utils/src/crypto/: error.rs  hash.rs  mod.rs
utils/src/database/: error.rs  mod.rs  sqlite.rs  user.rs
website/: .eslintrc.json  config.ts  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
website/api/: index.ts
website/api_utils/: axios.ts  create-directory.ts  index.ts  list.ts  login.ts  register.ts  upload.ts
website/components/: container.tsx  footer.tsx  header.tsx  main.tsx
website/components/auth/: button.tsx  error.tsx  title.tsx
website/components/home/: cards.tsx  description.tsx  grid.tsx  title.tsx
website/components/other/: icon-div.tsx  icon.tsx
website/components/user/: table.tsx
website/components/user/modals/: create-folder.tsx  style.tsx  upload.tsx
website/pages/: 404.tsx  500.tsx  _app.tsx  index.tsx  login.tsx  register.tsx
website/pages/user/: files.tsx
website/types/: theme.ts
