[package]
name = "homedisk"
description = "Extremely fast and lightweight local cloud for your data written in Rust."
authors = ["MedzikUser <medzik@duck.com>"]
homepage = "https://github.com/HomeDisk/cloud"
repository = "https://github.com/HomeDisk/cloud"
license = "GPL-3.0-or-later"
version = "0.0.0-dev"
edition = "2021"

[dependencies]
# Types
serde = { version = "1.0", features = ["derive"] }
# Errors
anyhow = "1.0"
thiserror = "1.0"

# Logger
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info", "log"] }
tracing-subscriber = "0.3"
# Backtrace in panic hook
backtrace = "0.3"

# Tokio runtime
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"] }

# Database
futures-util = "0.3"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1.2", features = ["v4"] }

# Cryptographic
crypto-utils = "0.4"
hex = "0.4"

# Config
toml = "0.5"

# HTTP server
axum = { version = "0.6.0-rc.2", features = ["http2", "multipart"] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
tower-http = { version = "0.3", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
byte-unit = "4.0"

# HTTP rate limiting
once_cell = "1.15"
governor = "0.5"

# CLI
clap = { version = "3.2", features = ["derive"] }
