[package]
name = "homedisk"
authors = ["MedzikUser <nivua1fn@duck.com>"]
homepage = "https://github.com/HomeDisk/cloud"
repository = "https://github.com/HomeDisk/cloud"
license = "GPL-3.0-or-later"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "homedisk"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.58"
better-panic = "0.3.0"
simplelog = "0.12.0"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
homedisk-database = { path = "../database" }
homedisk-server = { path = "../server" }
homedisk-types = { path = "../types", features = ["config"] }
