[package]
name = "homedisk-database"
version = "0.0.0"
edition = "2021"

[dependencies]
log = "0.4.17"
futures-util = "0.3.21"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1.1.2", features = ["v5"] }
homedisk-types = { path = "../types", features = ["database"] }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
