[package]
name = "homedisk-database"
version = "0.0.0"
edition = "2021"

[dependencies]
tracing = "0.1.36"
futures-util = "0.3.21"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1.1.2", features = ["v5"] }
homedisk-types = { path = "../types", features = ["database"] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
