[package]
name = "homedisk-server"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.5.4"
log = "0.4.16"
thiserror = "1.0.31"
serde = { version = "1.0.136", features = ["derive"] }
tower-http = { version = "0.3.1", features = ["full"] }
hyper = { version = "0.14.18", features = ["full"] }
rust_utilities = { version = "0.2.0", features = ["jsonwebtoken"] }
homedisk-database = { path = "../database" }
homedisk-types = { path = "../types", features = ["axum"] }
axum-auth = "0.2.0"
jsonwebtoken = "8.1.0"
base64 = "0.13.0"
byte-unit = "4.0.14"
