[package]
name = "homedisk-types"
version = "0.0.0"
edition = "2021"

[features]
config = ["toml", "dirs"]
database = ["crypto-utils", "hex", "sqlx"]

[dependencies]
thiserror = "1.0.31"
uuid = "1.1.2"
anyhow = "1.0.58"
serde = { version = "1.0.138", features = ["derive"] }
axum = { version = "0.5.11", optional = true }
toml = { version = "0.5.9", optional = true }
dirs = { version = "4.0.0", optional = true }
crypto-utils = { version = "0.4.0", features = ["sha"], optional = true }
hex = { version = "0.4.3", optional = true }
sqlx = { version = "0.6.0", features = ["sqlite"], optional = true }
