[package]
name = "homedisk-types"
version = "0.0.0"
edition = "2021"

[features]
config = ["toml", "dirs"]
database = ["crypto-utils", "hex", "sqlx"]

[dependencies]
thiserror = "1.0.32"
uuid = "1.1.2"
anyhow = "1.0.60"
serde = { version = "1.0.142", features = ["derive"] }
axum = { version = "0.5.13", optional = true }
toml = { version = "0.5.9", optional = true }
dirs = { version = "4.0.0", optional = true }
crypto-utils = { version = "0.4.0", features = ["sha"], optional = true }
hex = { version = "0.4.3", optional = true }
sqlx = { version = "0.6.1", features = ["sqlite"], optional = true }
