[package]
name = "homedisk-utils"
version = "0.0.0"
edition = "2021"

[features]
full = ["crypto", "config", "database"]
crypto = ["sha-1", "sha2", "hex"]
config = ["toml", "anyhow", "dirs"]
database = ["rusqlite", "uuid"]

[dependencies]
log = "0.4.16"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

# crypto
[dependencies.sha-1]
version = "0.10.0"
optional = true
[dependencies.sha2]
version = "0.10.2"
optional = true
[dependencies.hex]
version = "0.4.3"
optional = true

# config
[dependencies.toml]
version = "0.5.9"
optional = true
[dependencies.anyhow]
version = "1.0.56"
optional = true
[dependencies.dirs]
version = "4.0.0"
optional = true

# database
[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]
optional = true
[dependencies.uuid]
version = "0.8.2"
features = ["v4", "v5"]
optional = true
