[package]
name = "homedisk-utils"
version = "0.0.0"
edition = "2021"

[features]
full = ["crypto", "database"]
crypto = ["sha-1", "sha2", "hex"]
database = ["sqlx", "uuid"]

[dependencies]
log = "0.4.16"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

# crypto
[dependencies.sha-1]
version = "0.10.0"
optional = true
[dependencies.sha2]
version = "0.10.2"
optional = true
[dependencies.hex]
version = "0.4.3"
optional = true

# database
[dependencies.sqlx]
version = "0.5.13"
features = ["runtime-tokio-rustls", "sqlite"]
optional = true
[dependencies.uuid]
version = "1.0.0"
features = ["v4", "v5"]
optional = true

[dev-dependencies.tokio]
version = "1.17.0"
features = ["full"]
