[package]
name = "homedisk-utils"
version = "0.0.0"
edition = "2021"

[features]
full = ["database"]
database = ["sqlx", "uuid"]

[dependencies]
log = "0.4.16"
futures-util = "0.3.21"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

# database
[dependencies.sqlx]
version = "0.5.13"
features = ["runtime-tokio-rustls", "sqlite"]
optional = true
[dependencies.uuid]
version = "1.0.0"
features = ["v5"]
optional = true
[dependencies.rust_utilities]
version = "0.2.0"
features = ["sha"]

[dev-dependencies.tokio]
version = "1.17.0"
features = ["full"]
